--- a/documentation/latex-user/chapter-introduction.tex
+++ b/documentation/latex-user/chapter-introduction.tex
@@ -13,7 +13,7 @@ The \emph{tutorials} section contains a quick five-minutes tutorial that serves 
 features. If you decide to skip this tutorial, you should at least install the \emph{Reprotool example projects} into your workspace
 because you will need them in later parts of this documentation. Read the tutorial for information how to install the example projects.
 
-If you display the \emph{Welcome page} in other that maximized mode, you will see the quick tutorial in the welcome page. This way, you
+If you display the \emph{Welcome page} in other than maximized mode, you will see the quick tutorial in the welcome page. This way, you
 can easily follow the tutorial and perform the required steps in the workbench.
 
 \begin{figure}[ht]
